# Base-Alignment-Algorithms

./: Dockerfile  Needleman-Wunsch.cpp  Pseudo.txt  Scratch.cpp  nw.cpp  s2.txt  tests.cpp
TRASH/: CMAKE scratch.txt  CMakeLists.txt  Dockerfile  Dockerfile3  Scratch.txt  helpers.cpp  helpers.hpp  main.cpp
TRASH/Dockerfiles/: Dockerfile
